Enable the heat map, fix small layout issues

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1202,12 +1202,12 @@ input:checked + .toggle-bg {
   margin: -0.75rem;
 }
 
-.m-0 {
-  margin: 0px;
-}
-
 .m-auto {
   margin: auto;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .mx-auto {
@@ -1289,8 +1289,8 @@ input:checked + .toggle-bg {
   margin-right: 0.75rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
+.mt-40 {
+  margin-top: 10rem;
 }
 
 .mt-2 {
@@ -1299,10 +1299,6 @@ input:checked + .toggle-bg {
 
 .mb-1 {
   margin-bottom: 0.25rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
 }
 
 .block {
@@ -1369,18 +1365,18 @@ input:checked + .toggle-bg {
   height: 3.5rem;
 }
 
+.h-max {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
 .h-9 {
   height: 2.25rem;
 }
 
 .h-4 {
   height: 1rem;
-}
-
-.h-max {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
 }
 
 .min-h-screen {
@@ -1407,24 +1403,12 @@ input:checked + .toggle-bg {
   width: auto;
 }
 
-.w-2\/5 {
-  width: 40%;
-}
-
 .w-12 {
   width: 3rem;
 }
 
-.w-3\/5 {
-  width: 60%;
-}
-
 .w-\[847px\] {
   width: 847px;
-}
-
-.w-4\/5 {
-  width: 80%;
 }
 
 .w-\[100\%\] {
@@ -1433,10 +1417,6 @@ input:checked + .toggle-bg {
 
 .w-14 {
   width: 3.5rem;
-}
-
-.w-3\/4 {
-  width: 75%;
 }
 
 .w-64 {
@@ -1451,10 +1431,6 @@ input:checked + .toggle-bg {
   width: 1rem;
 }
 
-.w-\[\] {
-  width: ;
-}
-
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -1467,20 +1443,20 @@ input:checked + .toggle-bg {
   max-width: 48rem;
 }
 
-.max-w-\[100\%\] {
-  max-width: 100%;
-}
-
 .max-w-xl {
   max-width: 36rem;
 }
 
-.max-w-\[\] {
-  max-width: ;
+.max-w-5xl {
+  max-width: 64rem;
 }
 
-.max-w-\[100\] {
-  max-width: 100;
+.max-w-4xl {
+  max-width: 56rem;
+}
+
+.max-w-6xl {
+  max-width: 72rem;
 }
 
 .flex-1 {
@@ -1493,10 +1469,6 @@ input:checked + .toggle-bg {
 
 .flex-shrink {
   flex-shrink: 1;
-}
-
-.shrink-0 {
-  flex-shrink: 0;
 }
 
 .origin-top-right {
@@ -1630,10 +1602,6 @@ input:checked + .toggle-bg {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
 .gap-6 {
   gap: 1.5rem;
 }
@@ -1712,10 +1680,6 @@ input:checked + .toggle-bg {
   border-color: rgb(249 250 251 / var(--tw-divide-opacity));
 }
 
-.self-start {
-  align-self: flex-start;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1742,6 +1706,10 @@ input:checked + .toggle-bg {
   border-radius: 0.5rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1756,10 +1724,6 @@ input:checked + .toggle-bg {
 
 .rounded {
   border-radius: 0.25rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .rounded-l-lg {
@@ -1881,6 +1845,11 @@ input:checked + .toggle-bg {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1897,6 +1866,10 @@ input:checked + .toggle-bg {
   padding: 0.75rem;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -1905,24 +1878,12 @@ input:checked + .toggle-bg {
   padding: 0.25rem;
 }
 
-.p-2\.5 {
-  padding: 0.625rem;
-}
-
 .p-10 {
   padding: 2.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
-}
-
-.p-0 {
-  padding: 0px;
+.p-2\.5 {
+  padding: 0.625rem;
 }
 
 .px-4 {
@@ -1970,6 +1931,11 @@ input:checked + .toggle-bg {
   padding-bottom: 5rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1985,11 +1951,6 @@ input:checked + .toggle-bg {
   padding-bottom: 0.625rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .pt-5 {
   padding-top: 1.25rem;
 }
@@ -2002,8 +1963,8 @@ input:checked + .toggle-bg {
   padding-top: 2rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pt-12 {
@@ -2020,6 +1981,10 @@ input:checked + .toggle-bg {
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .pt-36 {
@@ -2058,14 +2023,6 @@ input:checked + .toggle-bg {
   padding-top: 0.5rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -2098,11 +2055,6 @@ input:checked + .toggle-bg {
   line-height: 1.75rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -2113,14 +2065,14 @@ input:checked + .toggle-bg {
   line-height: 1.75rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-medium {
@@ -2147,6 +2099,10 @@ input:checked + .toggle-bg {
   line-height: 45px;
 }
 
+.leading-\[70px\] {
+  line-height: 70px;
+}
+
 .leading-\[30px\] {
   line-height: 30px;
 }
@@ -2165,18 +2121,6 @@ input:checked + .toggle-bg {
 
 .leading-9 {
   line-height: 2.25rem;
-}
-
-.leading-\[7\] {
-  line-height: 7;
-}
-
-.leading-\[70px\] {
-  line-height: 70px;
-}
-
-.leading-\[\] {
-  line-height: ;
 }
 
 .tracking-wide {
@@ -2283,6 +2227,46 @@ input:checked + .toggle-bg {
 
 .opacity-100 {
   opacity: 1;
+}
+
+.opacity-20 {
+  opacity: 0.2;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
+.opacity-5 {
+  opacity: 0.05;
+}
+
+.opacity-\[10px\;\] {
+  opacity: 10px;;
+}
+
+.opacity-\[10px\] {
+  opacity: 10px;
+}
+
+.opacity-\[0\.33\] {
+  opacity: 0.33;
+}
+
+.opacity-\[0\.13\] {
+  opacity: 0.13;
+}
+
+.opacity-\[0\.53\] {
+  opacity: 0.53;
+}
+
+.opacity-\[0\.63\] {
+  opacity: 0.63;
+}
+
+.opacity-\[0\.93\] {
+  opacity: 0.93;
 }
 
 .shadow-lg {
@@ -2660,6 +2644,14 @@ input:checked + .toggle-bg {
     display: none;
   }
 
+  .md\:w-2\/5 {
+    width: 40%;
+  }
+
+  .md\:w-3\/5 {
+    width: 60%;
+  }
+
   .md\:w-4\/5 {
     width: 80%;
   }
@@ -2668,24 +2660,8 @@ input:checked + .toggle-bg {
     width: 75%;
   }
 
-  .md\:w-3\/5 {
-    width: 60%;
-  }
-
-  .md\:w-2\/5 {
-    width: 40%;
-  }
-
-  .md\:max-w-7xl {
-    max-width: 80rem;
-  }
-
   .md\:max-w-\[100\%\] {
     max-width: 100%;
-  }
-
-  .md\:max-w-\[\] {
-    max-width: ;
   }
 
   .md\:flex-1 {
@@ -2704,10 +2680,6 @@ input:checked + .toggle-bg {
     flex-direction: row;
   }
 
-  .md\:flex-col {
-    flex-direction: column;
-  }
-
   .md\:items-start {
     align-items: flex-start;
   }
@@ -2718,10 +2690,6 @@ input:checked + .toggle-bg {
 
   .md\:justify-start {
     justify-content: flex-start;
-  }
-
-  .md\:justify-center {
-    justify-content: center;
   }
 
   .md\:justify-between {
@@ -2775,11 +2743,6 @@ input:checked + .toggle-bg {
     line-height: 1;
   }
 
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -2812,5 +2775,9 @@ input:checked + .toggle-bg {
 @media (min-width: 1280px) {
   .xl\:w-96 {
     width: 24rem;
+  }
+
+  .xl\:text-left {
+    text-align: left;
   }
 }
